--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,34 @@
 alembic==1.7.6
+amqp==5.0.9
 anyio==3.5.0
 asgiref==3.5.0
+billiard==3.6.4.0
+celery==5.2.3
 click==8.0.4
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+Deprecated==1.2.13
 fastapi==0.74.1
 greenlet==1.1.2
 h11==0.13.0
 idna==3.3
+kombu==5.2.3
 Mako==1.1.6
 MarkupSafe==2.1.0
+packaging==21.3
+prompt-toolkit==3.0.28
 pydantic==1.9.0
+pyparsing==3.0.7
 python-dotenv==0.19.2
+pytz==2021.3
+redis==4.1.4
+six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.31
 starlette==0.17.1
 typing_extensions==4.1.1
 uvicorn==0.17.5
+vine==5.0.0
+wcwidth==0.2.5
+wrapt==1.13.3
