--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-sqlalchemy_url = sqlite:///burgers.db
-celery_broker_url = redis://localhost:6379/0
-celery_result_backend = redis://localhost:6379/1
+sqlalchemy_url=sqlite:///burgers.db
+celery_broker_url=redis://localhost:6379/0
+celery_result_backend=redis://localhost:6379/1
