--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-sqlalchemy_url=sqlite:///burgers.db
-celery_broker_url=redis://localhost:6379/0
-celery_result_backend=redis://localhost:6379/1
+SQLALCHEMY_URL="sqlite:///burgers.db"
+CELERY_BROKER_URL="redis://localhost:6379/0"
+CELERY_RESULT_BACKEND="redis://localhost:6379/1"
