--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,19 @@ services:
       dockerfile: Dockerfile
     ports:
       - '8000:8000'
-    network_mode: host
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/1
 
   worker:
-    build: ./project
+    build: .
     command: celery -A cafe.background.app:celery worker --loglevel=info
     depends_on:
       - web
       - redis
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/1
 
   redis:
     image: redis:6-alpine
